--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JadwalKuliah App</title>
+  <link rel="stylesheet" href="lps.css">
 </head>
 <body>
-    <h1>aowkokaw</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum atque porro beatae, eveniet rem pariatur. Dolore cumque nobis nisi, in amet ducimus aperiam nesciunt, sit, ex labore officia maiores cupiditate?</p>
+  <header>
+    <div class="logo">👅👅 JadwalKuliah</div>
+    <nav>
+      <a href="#fitur">Fitur</a>
+      <a href="#mulai">Mulai</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Atur Jadwal Kuliahmu Lebih Mudah</h1>
+    <p>Input, simpan, dan kelola jadwal mata kuliah dalam satu aplikasi sederhana.</p>
+    <a href="/o/index.html" class="cta-button">Mulai Sekarang</a>
+  </section>
+
+  <footer>
+    <p>© 2025 JadwalKuliah. Dibuat Dengan Malas</p>
+  </footer>
 </body>
 </html>
